...
        return (
          <>
            <Stack.Screen
              name="Chat"
              component={ChatScreen}
              options={({navigation}: any) => ({
                headerTitle: 'Chat Aleksey',
                headerRight: ({tintColor}: any) => (
                  <HeaderIconButton
                    name="settings-2-outline"
                    color={tintColor}
                    onPress={() => navigation.navigate('Settings')}
                  />
...
